fix abstract linebreak

--- a/eassy.tex
+++ b/eassy.tex
@@ -59,7 +59,8 @@
 \renewcommand{\abstractname}{}
 \begin{abstract}
     \noindent{}\textbf{摘要}：......\par
-    \noindent{}\textbf{关键字}：......  \textbf{中图分类号：}xxx \qquad \textbf{文献标志码：}A
+    \noindent{}\textbf{关键字}：......\par
+    \noindent \textbf{中图分类号：}xxx \qquad \textbf{文献标志码：}A
 \end{abstract}
 \begin{abstract}
     \noindent{}\textbf{Abstract：}......\par
