--- a/eassy.tex
+++ b/eassy.tex
@@ -18,13 +18,13 @@
 
 % 英文字体，linux
 \setmainfont{Liberation Serif}
-\setsansfont{Liberation Serif}
-\setmonofont{Liberation Sans}
+\setsansfont{Liberation Sans}
+\setmonofont{Liberation Mono}
 
 % 中文字体，linux
-\setCJKmainfont{Noto Sans CJK SC}
-\setCJKsansfont{Noto Sans CJK SC}
-\setCJKmonofont{Noto Sans CJK SC}
+\setCJKmainfont{Source Han Serif CN}
+\setCJKsansfont{Source Han Sans CN}
+\setCJKmonofont{Source Han Sans CN}
 
 \usepackage[a4paper]{geometry}
 \geometry{a4paper,left=2cm,right=2cm,top=2.2cm,bottom=2cm}
