bib: use biblatex

--- a/eassy.tex
+++ b/eassy.tex
@@ -5,6 +5,8 @@
 \documentclass[10.5pt,a4paper,onecolumn]{article}
 \usepackage{fontspec,xltxtra,xunicode,hyperref}
 \usepackage[nofonts]{ctex}
+\usepackage{biblatex}
+\addbibresource{refs/refs.bib}
 
 \usepackage[fleqn]{amsmath}
 \usepackage{amssymb}
