change table package and the marigin

--- a/eassy.tex
+++ b/eassy.tex
@@ -12,11 +12,13 @@
 \usepackage{amssymb}
 \usepackage{mathtools}
 
-\usepackage{tabularx}
+\usepackage{booktabs}
 \usepackage{longtable}
 
 \usepackage{graphicx}
 \usepackage{tikz}
+
+\usepackage{listings}
 
 % 英文字体，linux
 \setmainfont{Liberation Serif}
@@ -29,7 +31,7 @@
 \setCJKmonofont{Source Han Sans CN}
 
 \usepackage[a4paper]{geometry}
-\geometry{a4paper,left=2cm,right=2cm,top=2.2cm,bottom=2cm,includehead,includefoot}
+\geometry{a4paper,left=2cm,right=2cm,top=1.6cm,bottom=2cm,includehead,includefoot}
 \linespread{1}
 \usepackage{microtype}
 
