--- a/eassy.tex
+++ b/eassy.tex
@@ -8,7 +8,7 @@
 \usepackage{biblatex}
 \addbibresource{refs/refs.bib}
 
-\usepackage[fleqn]{amsmath}
+\usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{mathtools}
 
